<resources>
    <string name="app_name">RMP_PR6</string>
    <string name="etId">Шифр</string>
    <string name="btnUpdate">Обновить</string>
    <string name="btnDelete">Удалить</string>
    <string name="etName">ФИО</string>
    <string name="etMail">E-mail</string>
    <string name="btnADD">Добавить</string>
    <string name="btnRead">Прочитать</string>
    <string name="btnClear">Очистить</string>
</resources>